[tool.poetry]
name = "sync-bot"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
readme = "README.md"
packages = [{include = "sync_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
dotenv = "^0.0.5"
python-dotenv = "^1.0.0"
pytz = "^2023.3.post1"
yadisk-async = "^1.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
